--- a/index.html
+++ b/index.html
@@ -1,39 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Aliaksei and Hanna</title>
+    <title>Hanna and Aliaksei</title>
 
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>
-        <div>Aliaksei</div>
-        and
+    <div class="title">
         <div>Hanna</div>
-    </h1>
+        and
+        <div>Aliaksei</div>
+    </div>
     <nav>
         <div></div>
-        <a href="/">Home</a>
-        <a href="/">Place</a>
-        <a href="/">Travel</a>
-        <a href="/"></a>
+        <a href="#place">Место</a>
+        <a href="#schedule">Программа</a>
+        <a href="#transport">Транспорт</a>
+        <a href="#info">Детали</a>
+        <a href="#contacts">Контакты</a>
         <div></div>
     </nav>
     <img
-            class="photo"
-            src="./img.png"
-    alt="Hanna and Aliaksei"
+        class="photo"
+        src="./img/photo_2024-04-20_21-28-49.jpg"
+        alt="Hanna and Aliaksei"
     />
-    <div class="poetry">Please join us for our wedding celebration on</div>
-    <div class="date">
-        October 6, 2024
-    </div>
-    <img class="and-img" src="&.png" alt="&">
-    <div class="our-story">
-        our story
+    <div class="invitation">
+        <div class="dear-friends">Дорогие друзья!</div>
+        <div>
+        С радостью сообщаем вам, что наша долгожданная вечеринка любви и счастья, наша свадьба, наконец-то становится реальностью!
+        <br>
+        Этот момент - особенный для нас, и мы искренне хотим, чтобы вы разделили его с нами.
+        <br>
+        С нетерпением ждем встречи с вами на этом особом событии!
+        </div>
     </div>
     <div class="separator"></div>
+    <div class="section">
+        <div id="place" class="section_header">
+            Место
+        </div>
+        <div class="date">
+           Октябрь 6, 2024
+        </div>
+        <div class="address">
+            <a target="_blank" href="https://www.google.com/maps/dir//Piazza+del+Caduti,+32,+25083+Gardone+Riviera+BS,+%D0%98%D1%82%D0%B0%D0%BB%D0%B8%D1%8F/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47818e9fe0ad892b:0xaadefbd361429419?sa=X&ved=1t:707&ictx=111">
+                <div>Gardone Riviera Villa Maria, Italy</div>
+            </a>
+        </div>
+        <img
+                class="photo"
+                src="./img/villa.webp"
+                alt="villa"
+        />
+<!--        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.6814097944134!2d10.561657864811465!3d45.62300332665846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47818e9fe0ad892b%3A0xaadefbd361429419!2zUGlhenphIGRlbCBDYWR1dGksIDMyLCAyNTA4MyBHYXJkb25lIFJpdmllcmEgQlMsINCY0YLQsNC70LjRjw!5e0!3m2!1sru!2spl!4v1713106541006!5m2!1sru!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
+    </div>
+    <div class="separator"></div>
+    <div class="section">
+        <div id="schedule" class="section_header">
+            Программа
+        </div>
+        <div class="schedule-container">
+            <div>
+                <img
+                        class="photo"
+                        src="./img/dance.jpg"
+                        alt="Hanna and Aliaksei"
+                />
+            </div>
+            <div class="schedule-list">
+                <div>
+                    09:00 - что-то происходит
+                </div>
+                <div>
+                    09:00 - что-то происходит
+                </div>
+                <div>
+                    09:00 - что-то происходит
+                </div>
+                <div>
+                    09:00 - что-то происходит
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="separator"></div>
+    <div class="section">
+        <div id="transport" class="section_header">
+            Транспорт
+        </div>
+        <img class="plane-departure" src="./img/plane.svg" alt="Departure">
+        <div>Время дата: встреча в аэропорту Шопена</div>
+        <div>Вылет Варшава Waw - Милан BGY, время вылета: 13:30</div>
+        <div>Встречаемся у ленты забора багажа</div>
+        <div>В Милане нас будет ждать трансфер до виллы.</div>
+        <img class="plane-departure" src="./img/plane.svg" alt="Departure">
+        <div>Рейс: Варшава Waw - Милан BGY</div>
+        <div>время вылета: 13:30</div>
+    </div>
+    <div class="separator"></div>
+    <div class="section">
+        <div id="info" class="section_header">
+            Цветовая гамма
+        </div>
+        <div>Нам будет приятно, если вы поддержите цветовую гамму торжества:</div>
+        <div class="color-palette">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+        <div class="section_header">
+            Пожелания по подаркам
+        </div>
+        <div>Главное для нас - ваше присутствие на свадьбе и ваше внимание, а радость доставит любой подарок в конверте.</div>
+    </div>
 
+
+    <div class="separator"></div>
+    <div class="section">
+        <div id="contacts" class="section_header">
+            Контакты
+        </div>
+
+        <a href="https://drive.google.com/drive/folders/1vx7UToDbicNW3yjvAs6f-jDkNdpBi84r?usp=sharing" target="_blank">
+            Ссылка для загрузки ваших фото и видео
+        </a>
+        <div class="contacts-container">
+            <div class="contact">
+                <div class="sub_header">
+                    Организатор
+                </div>
+                <div class="portrait-circle">
+                    <img src="./img/Sasha.PNG" alt="Sasha">
+                </div>
+                Саша Есман
+                <div>
+                    <a target="_blank" href="https://t.me/Sasha_Yesman">Telegram</a>
+                </div>
+            </div>
+
+
+            <div class="contact">
+                <div class="sub_header">
+                    Ведущий
+                </div>
+                <div class="portrait-circle">
+                    <img src="./img/Sasha.PNG" alt="Sasha">
+                </div>
+                <div>
+                    <a target="_blank" href="https://t.me/Sasha_Yesman">Telegram</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
