--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
         <div>Aliaksei</div>
     </div>
     <nav>
-        <div></div>
         <a href="#place">Место</a>
         <a href="#schedule">Программа</a>
         <a href="#transport">Транспорт</a>
         <a href="#info">Детали</a>
         <a href="#contacts">Контакты</a>
-        <div></div>
     </nav>
     <img
-        class="photo"
+        class="photo initial-photo"
         src="./img/photo_2024-04-20_21-28-49.jpg"
         alt="Hanna and Aliaksei"
     />
@@ -35,24 +33,25 @@
         <br>
         С нетерпением ждем встречи с вами на этом особом событии!
         </div>
+        <div class="date">
+            Октябрь 6, 2024
+        </div>
     </div>
     <div class="separator"></div>
     <div class="section">
         <div id="place" class="section_header">
-            Место
+            Локация
         </div>
-        <div class="date">
-           Октябрь 6, 2024
-        </div>
+        <div>Gardone Riviera Villa Maria, Italy</div>
         <div class="address">
             <a target="_blank" href="https://www.google.com/maps/dir//Piazza+del+Caduti,+32,+25083+Gardone+Riviera+BS,+%D0%98%D1%82%D0%B0%D0%BB%D0%B8%D1%8F/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47818e9fe0ad892b:0xaadefbd361429419?sa=X&ved=1t:707&ictx=111">
-                <div>Gardone Riviera Villa Maria, Italy</div>
+                Маршрут
             </a>
         </div>
         <img
-                class="photo"
-                src="./img/villa.webp"
-                alt="villa"
+            class="photo"
+            src="./img/villa.webp"
+            alt="villa"
         />
 <!--        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.6814097944134!2d10.561657864811465!3d45.62300332665846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47818e9fe0ad892b%3A0xaadefbd361429419!2zUGlhenphIGRlbCBDYWR1dGksIDMyLCAyNTA4MyBHYXJkb25lIFJpdmllcmEgQlMsINCY0YLQsNC70LjRjw!5e0!3m2!1sru!2spl!4v1713106541006!5m2!1sru!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
     </div>
@@ -71,16 +70,29 @@
             </div>
             <div class="schedule-list">
                 <div>
-                    09:00 - что-то происходит
+                    <div class="schedule-list-header">
+                        5 октября
+                    </div>
+                    <div>
+                        21:30 - лёгкий ужин
+                    </div>
                 </div>
                 <div>
-                    09:00 - что-то происходит
-                </div>
-                <div>
-                    09:00 - что-то происходит
-                </div>
-                <div>
-                    09:00 - что-то происходит
+                    <div class="schedule-list-header">
+                        6 октября
+                    </div>
+                    <div>
+                        15:30 - церемония
+                    </div>
+                    <div>
+                        16:00 - коктейль тайм
+                    </div>
+                    <div>
+                        17:00 - праздничный ужин
+                    </div>
+                    <div>
+                        21:00 - свадебный торт
+                    </div>
                 </div>
             </div>
         </div>
@@ -91,18 +103,23 @@
             Транспорт
         </div>
         <img class="plane-departure" src="./img/plane.svg" alt="Departure">
-        <div>Время дата: встреча в аэропорту Шопена</div>
-        <div>Вылет Варшава Waw - Милан BGY, время вылета: 13:30</div>
+        <div>5 октября</div>
+        <div>15:00 - Встреча в аэропорту Шопена</div>
+        <div>17:55 - Вылет Варшава Waw - Милан BGY</div>
+        <div>20:00 - Прилет</div>
         <div>Встречаемся у ленты забора багажа</div>
-        <div>В Милане нас будет ждать трансфер до виллы.</div>
+        <div>В Милане нас будет ждать трансфер до виллы</div>
         <img class="plane-departure" src="./img/plane.svg" alt="Departure">
-        <div>Рейс: Варшава Waw - Милан BGY</div>
-        <div>время вылета: 13:30</div>
+        <div>7 октября</div>
+        <div>17:30 - Выезд трансфером в аэропорт</div>
+        <div>20:35 - Вылет Варшава Waw - Милан BGY</div>
+        <div>22:35 - Прилет</div>
+        <div>Встречаемся у ленты забора багажа</div>
     </div>
     <div class="separator"></div>
     <div class="section">
         <div id="info" class="section_header">
-            Цветовая гамма
+            Дресс-код
         </div>
         <div>Нам будет приятно, если вы поддержите цветовую гамму торжества:</div>
         <div class="color-palette">
@@ -113,9 +130,13 @@
             <div class="circle"></div>
         </div>
         <div class="section_header">
-            Пожелания по подаркам
+            Пожелания
         </div>
-        <div>Главное для нас - ваше присутствие на свадьбе и ваше внимание, а радость доставит любой подарок в конверте.</div>
+        <div>
+            Просим не обременять себя выбором подарка,<br/>
+            а предоставить это замечательное право нам,<br/>
+            внеся свой вклад в бюджет нашей молодой семьи!
+        </div>
     </div>
 
 
@@ -128,6 +149,11 @@
         <a href="https://drive.google.com/drive/folders/1vx7UToDbicNW3yjvAs6f-jDkNdpBi84r?usp=sharing" target="_blank">
             Ссылка для загрузки ваших фото и видео
         </a>
+        <div>
+            Если вы хотели бы подготовить для нас сюрприз или творческий подарок,<br>
+            не забудьте предупредить нашего свадебного организатора Александру.<br>
+            Она поможет воплотить вашу идею, ответит на все свадебные вопросы.
+        </div>
         <div class="contacts-container">
             <div class="contact">
                 <div class="sub_header">
@@ -136,7 +162,7 @@
                 <div class="portrait-circle">
                     <img src="./img/Sasha.PNG" alt="Sasha">
                 </div>
-                Саша Есман
+                Александра Есман
                 <div>
                     <a target="_blank" href="https://t.me/Sasha_Yesman">Telegram</a>
                 </div>
@@ -148,12 +174,18 @@
                     Ведущий
                 </div>
                 <div class="portrait-circle">
-                    <img src="./img/Sasha.PNG" alt="Sasha">
+                    <img src="./img/host.JPG" alt="Artyom">
                 </div>
+                Артём Валентинович
                 <div>
-                    <a target="_blank" href="https://t.me/Sasha_Yesman">Telegram</a>
+                    <a target="_blank" href="https://t.me/tema_vernik">Telegram</a>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="section">
+        <div class="section_header">
+            06/10 | Ждем вас, дорогие
         </div>
     </div>
 </body>
