--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="photo-container">
             <img
-                class="photo photo-villa"
+                class="photo"
                 src="./img/villa.webp"
                 alt="villa"
             />
