--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Hanna and Aliaksei</title>
-
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -19,11 +18,17 @@
         <a href="#info">Детали</a>
         <a href="#contacts">Контакты</a>
     </nav>
-    <img
-        class="photo initial-photo"
-        src="./img/photo_2024-04-20_21-28-49.jpg"
-        alt="Hanna and Aliaksei"
-    />
+    <div class="photo-container">
+        <img
+                class="photo initial-photo"
+                src="./img/photo_2024-04-20_21-28-49.jpg"
+                alt="Hanna and Aliaksei"
+        />
+    </div>
+
+
+
+
     <div class="invitation">
         <div class="dear-friends">Дорогие друзья!</div>
         <div>
@@ -37,7 +42,15 @@
             Октябрь 6, 2024
         </div>
     </div>
+
+
+
+
+
     <div class="separator"></div>
+
+
+
     <div class="section">
         <div id="place" class="section_header">
             Локация
@@ -45,29 +58,28 @@
         <div>Gardone Riviera Villa Maria, Italy</div>
         <div class="address">
             <a target="_blank" href="https://www.google.com/maps/dir//Piazza+del+Caduti,+32,+25083+Gardone+Riviera+BS,+%D0%98%D1%82%D0%B0%D0%BB%D0%B8%D1%8F/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47818e9fe0ad892b:0xaadefbd361429419?sa=X&ved=1t:707&ictx=111">
-                Маршрут
+                Как добраться
             </a>
         </div>
-        <img
-            class="photo"
-            src="./img/villa.webp"
-            alt="villa"
-        />
-<!--        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.6814097944134!2d10.561657864811465!3d45.62300332665846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47818e9fe0ad892b%3A0xaadefbd361429419!2zUGlhenphIGRlbCBDYWR1dGksIDMyLCAyNTA4MyBHYXJkb25lIFJpdmllcmEgQlMsINCY0YLQsNC70LjRjw!5e0!3m2!1sru!2spl!4v1713106541006!5m2!1sru!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
+        <div class="photo-container">
+            <img
+                class="photo photo-villa"
+                src="./img/villa.webp"
+                alt="villa"
+            />
+        </div>
+<!--            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.6814097944134!2d10.561657864811465!3d45.62300332665846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47818e9fe0ad892b%3A0xaadefbd361429419!2zUGlhenphIGRlbCBDYWR1dGksIDMyLCAyNTA4MyBHYXJkb25lIFJpdmllcmEgQlMsINCY0YLQsNC70LjRjw!5e0!3m2!1sru!2spl!4v1713106541006!5m2!1sru!2spl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
     </div>
+
+
     <div class="separator"></div>
+
+
     <div class="section">
         <div id="schedule" class="section_header">
             Программа
         </div>
-        <div class="schedule-container">
-            <div>
-                <img
-                        class="photo"
-                        src="./img/dance.jpg"
-                        alt="Hanna and Aliaksei"
-                />
-            </div>
+
             <div class="schedule-list">
                 <div>
                     <div class="schedule-list-header">
@@ -95,9 +107,20 @@
                     </div>
                 </div>
             </div>
+            <div class="photo-container">
+                <img
+                        class="photo"
+                        src="./img/dance.jpg"
+                        alt="Hanna and Aliaksei"
+                />
+            </div>
         </div>
-    </div>
+
+
     <div class="separator"></div>
+
+
+
     <div class="section">
         <div id="transport" class="section_header">
             Транспорт
@@ -116,7 +139,12 @@
         <div>22:35 - Прилет</div>
         <div>Встречаемся у ленты забора багажа</div>
     </div>
+
+
+
     <div class="separator"></div>
+
+
     <div class="section">
         <div id="info" class="section_header">
             Дресс-код
@@ -141,6 +169,9 @@
 
 
     <div class="separator"></div>
+
+
+
     <div class="section">
         <div id="contacts" class="section_header">
             Контакты
