--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="photo-container">
             <img
                 class="photo"
-                src="./img/villa.webp"
+                src="./img/villa2.webp"
                 alt="villa"
             />
         </div>
@@ -212,11 +212,6 @@
                     <a target="_blank" href="https://t.me/tema_vernik">Telegram</a>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="section">
-        <div class="section_header">
-            06/10 | Ждем вас, дорогие
         </div>
     </div>
 </body>
