--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div>Aliaksei</div>
     </div>
     <nav>
-        <a href="#place">Место</a>
+        <a href="#place">Локация</a>
         <a href="#schedule">Программа</a>
-        <a href="#transport">Транспорт</a>
+        <a href="#transport">Трансфер</a>
         <a href="#info">Детали</a>
         <a href="#contacts">Контакты</a>
     </nav>
@@ -123,7 +123,7 @@
 
     <div class="section">
         <div id="transport" class="section_header">
-            Транспорт
+            Трансфер
         </div>
         <img class="plane-departure" src="./img/plane.svg" alt="Departure">
         <div>5 октября</div>
