--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
             Локация
         </div>
         <div>Gardone Riviera Villa Maria, Italy</div>
-        <div class="address">
-            <a target="_blank" href="https://www.google.com/maps/dir//Piazza+del+Caduti,+32,+25083+Gardone+Riviera+BS,+%D0%98%D1%82%D0%B0%D0%BB%D0%B8%D1%8F/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47818e9fe0ad892b:0xaadefbd361429419?sa=X&ved=1t:707&ictx=111">
-                Как добраться
-            </a>
-        </div>
+        <a class="button_link place" target="_blank" href="https://www.google.com/maps/dir//Piazza+del+Caduti,+32,+25083+Gardone+Riviera+BS,+%D0%98%D1%82%D0%B0%D0%BB%D0%B8%D1%8F/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47818e9fe0ad892b:0xaadefbd361429419?sa=X&ved=1t:707&ictx=111">
+            Как добраться
+        </a>
         <div class="photo-container">
             <img
                 class="photo"
@@ -126,18 +124,23 @@
             Трансфер
         </div>
         <img class="plane-departure" src="./img/plane.svg" alt="Departure">
-        <div>5 октября</div>
-        <div>15:00 - Встреча в аэропорту Шопена</div>
-        <div>17:55 - Вылет Варшава Waw - Милан BGY</div>
-        <div>20:00 - Прилет</div>
-        <div>Встречаемся у ленты забора багажа</div>
-        <div>В Милане нас будет ждать трансфер до виллы</div>
+        <div class="schedule-list">
+            <div class="schedule-list-header">5 октября</div>
+            <div>15:00 - Встреча в аэропорту Шопена</div>
+            <div>17:55 - Вылет Варшава - Милан</div>
+            <div>20:00 - Прилет</div>
+        </div>
+        <div class="meet-description">
+            Встречаемся у ленты забора багажа<br/>
+            Нас будет ждать трансфер до виллы
+        </div>
         <img class="plane-departure" src="./img/plane.svg" alt="Departure">
-        <div>7 октября</div>
-        <div>17:30 - Выезд трансфером в аэропорт</div>
-        <div>20:35 - Вылет Варшава Waw - Милан BGY</div>
-        <div>22:35 - Прилет</div>
-        <div>Встречаемся у ленты забора багажа</div>
+        <div class="schedule-list">
+            <div class="schedule-list-header">7 октября</div>
+            <div>17:30 - Выезд трансфером в аэропорт</div>
+            <div>20:35 - Вылет Варшава - Милан</div>
+            <div>22:35 - Прилет</div>
+        </div>
     </div>
 
 
@@ -161,8 +164,8 @@
             Пожелания
         </div>
         <div>
-            Просим не обременять себя выбором подарка,<br/>
-            а предоставить это замечательное право нам,<br/>
+            Просим не обременять себя выбором подарка,
+            а предоставить это замечательное право нам,
             внеся свой вклад в бюджет нашей молодой семьи!
         </div>
     </div>
@@ -177,12 +180,12 @@
             Контакты
         </div>
 
-        <a href="https://drive.google.com/drive/folders/1vx7UToDbicNW3yjvAs6f-jDkNdpBi84r?usp=sharing" target="_blank">
-            Ссылка для загрузки ваших фото и видео
+        <a class="button_link upload" href="https://drive.google.com/drive/folders/1vx7UToDbicNW3yjvAs6f-jDkNdpBi84r?usp=sharing" target="_blank">
+            Сюда можно загрузить ваши фото и видео
         </a>
         <div>
-            Если вы хотели бы подготовить для нас сюрприз или творческий подарок,<br>
-            не забудьте предупредить нашего свадебного организатора Александру.<br>
+            Если вы хотели бы подготовить для нас сюрприз или творческий подарок,
+            не забудьте предупредить нашего свадебного организатора Александру.
             Она поможет воплотить вашу идею, ответит на все свадебные вопросы.
         </div>
         <div class="contacts-container">
@@ -195,7 +198,7 @@
                 </div>
                 Александра Есман
                 <div>
-                    <a target="_blank" href="https://t.me/Sasha_Yesman">Telegram</a>
+                    <a class="button_link contact" target="_blank" href="https://t.me/Sasha_Yesman">Telegram</a>
                 </div>
             </div>
 
@@ -208,9 +211,7 @@
                     <img src="./img/host.JPG" alt="Artyom">
                 </div>
                 Артём Валентинович
-                <div>
-                    <a target="_blank" href="https://t.me/tema_vernik">Telegram</a>
-                </div>
+                <a class="button_link contact" target="_blank" href="https://t.me/tema_vernik">Telegram</a>
             </div>
         </div>
     </div>
