--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="schedule-list">
             <div class="schedule-list-header">7 октября</div>
             <div>17:30 - Выезд трансфером в аэропорт</div>
-            <div>20:35 - Вылет Варшава - Милан</div>
+            <div>20:35 - Вылет Милан - Варшава</div>
             <div>22:35 - Прилет</div>
         </div>
     </div>
