Added fallback and animation for it

--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Hanna and Aliaksei</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="title">
-        <div>Hanna</div>
-        and
-        <div>Aliaksei</div>
+<div class="title">
+    <div>Hanna</div>
+    and
+    <div>Aliaksei</div>
+</div>
+<div class="fallback-content">
+    <div>
+        Пожалуйста, откройте приглашение с телефона
     </div>
+    <div class="photo-container">
+        <img
+                class="photo initial-photo"
+                src="./img/photo_2024-04-20_21-28-49.jpg"
+                alt="Hanna and Aliaksei"
+        />
+    </div>
+</div>
+<div class="primary-content">
     <nav>
         <a href="#place">Локация</a>
         <a href="#schedule">Программа</a>
@@ -25,31 +39,23 @@
                 alt="Hanna and Aliaksei"
         />
     </div>
-
-
-
-
     <div class="invitation">
         <div class="dear-friends">Дорогие друзья!</div>
         <div>
-        С радостью сообщаем вам, что наша долгожданная вечеринка любви и счастья, наша свадьба, наконец-то становится реальностью!
-        <br>
-        Этот момент - особенный для нас, и мы искренне хотим, чтобы вы разделили его с нами.
-        <br>
-        С нетерпением ждем встречи с вами на этом особом событии!
+            С радостью сообщаем вам, что наша долгожданная вечеринка любви и счастья, наша свадьба, наконец-то
+            становится
+            реальностью!
+            <br>
+            Этот момент - особенный для нас, и мы искренне хотим, чтобы вы разделили его с нами.
+            <br>
+            С нетерпением ждем встречи с вами на этом особом событии!
         </div>
         <div class="date">
             Октябрь 6, 2024
         </div>
     </div>
 
-
-
-
-
     <div class="separator"></div>
-
-
 
     <div class="section">
         <div id="place" class="section_header">
@@ -59,65 +65,62 @@
 
         <div class="photo-container">
             <img
-                class="photo"
-                src="./img/villa2.webp"
-                alt="villa"
+                    class="photo"
+                    src="./img/villa2.webp"
+                    alt="villa"
             />
         </div>
-        <a class="button_link place" target="_blank" href="https://www.google.com/maps/dir//Piazza+del+Caduti,+32,+25083+Gardone+Riviera+BS,+%D0%98%D1%82%D0%B0%D0%BB%D0%B8%D1%8F/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47818e9fe0ad892b:0xaadefbd361429419?sa=X&ved=1t:707&ictx=111">
+        <a class="button_link place" target="_blank"
+           href="https://www.google.com/maps/dir//Piazza+del+Caduti,+32,+25083+Gardone+Riviera+BS,+%D0%98%D1%82%D0%B0%D0%BB%D0%B8%D1%8F/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47818e9fe0ad892b:0xaadefbd361429419?sa=X&ved=1t:707&ictx=111">
             Как добраться
         </a>
-<!--            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.6814097944134!2d10.561657864811465!3d45.62300332665846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47818e9fe0ad892b%3A0xaadefbd361429419!2zUGlhenphIGRlbCBDYWR1dGksIDMyLCAyNTA4MyBHYXJkb25lIFJpdmllcmEgQlMsINCY0YLQsNC70LjRjw!5e0!3m2!1sru!2spl!4v1713106541006!5m2!1sru!2spl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
     </div>
 
-
     <div class="separator"></div>
-
 
     <div class="section">
         <div id="schedule" class="section_header">
             Программа
         </div>
 
-            <div class="schedule-list">
-                <div>
-                    <div class="schedule-list-header">
-                        5 октября
-                    </div>
-                    <div>
-                        21:30 - лёгкий ужин
-                    </div>
+        <div class="schedule-list">
+            <div>
+                <div class="schedule-list-header">
+                    5 октября
                 </div>
                 <div>
-                    <div class="schedule-list-header">
-                        6 октября
-                    </div>
-                    <div>
-                        15:30 - церемония
-                    </div>
-                    <div>
-                        16:00 - коктейль тайм
-                    </div>
-                    <div>
-                        17:00 - праздничный ужин
-                    </div>
-                    <div>
-                        21:00 - свадебный торт
-                    </div>
+                    21:30 - лёгкий ужин
                 </div>
             </div>
-            <div class="photo-container">
-                <img
-                        class="photo"
-                        src="./img/dance.jpg"
-                        alt="Hanna and Aliaksei"
-                />
+            <div>
+                <div class="schedule-list-header">
+                    6 октября
+                </div>
+                <div>
+                    15:30 - церемония
+                </div>
+                <div>
+                    16:00 - коктейль тайм
+                </div>
+                <div>
+                    17:00 - праздничный ужин
+                </div>
+                <div>
+                    21:00 - свадебный торт
+                </div>
             </div>
         </div>
+        <div class="photo-container">
+            <img
+                    class="photo"
+                    src="./img/dance.jpg"
+                    alt="Hanna and Aliaksei"
+            />
+        </div>
+    </div>
 
 
     <div class="separator"></div>
-
 
 
     <div class="section">
@@ -144,10 +147,7 @@
         </div>
     </div>
 
-
-
     <div class="separator"></div>
-
 
     <div class="section">
         <div id="info" class="section_header">
@@ -171,17 +171,15 @@
         </div>
     </div>
 
-
     <div class="separator"></div>
-
-
 
     <div class="section">
         <div id="contacts" class="section_header">
             Контакты
         </div>
 
-        <a class="button_link upload" href="https://drive.google.com/drive/folders/1vx7UToDbicNW3yjvAs6f-jDkNdpBi84r?usp=sharing" target="_blank">
+        <a class="button_link upload"
+           href="https://drive.google.com/drive/folders/1vx7UToDbicNW3yjvAs6f-jDkNdpBi84r?usp=sharing" target="_blank">
             Сюда можно загрузить ваши фото и видео
         </a>
         <div>
@@ -203,7 +201,6 @@
                 </div>
             </div>
 
-
             <div class="contact">
                 <div class="sub_header">
                     Ведущий
@@ -216,5 +213,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
