--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="photo-container">
             <img
                     class="photo"
-                    src="./img/dance.jpg"
+                    src="./img/dance%202.JPG"
                     alt="Hanna and Aliaksei"
             />
         </div>
@@ -131,8 +131,8 @@
         <div class="schedule-list">
             <div class="schedule-list-header">5 октября</div>
             <div>15:00 - Встреча в аэропорту Шопена</div>
-            <div>17:55 - Вылет Варшава - Милан</div>
-            <div>20:00 - Прилет</div>
+            <div>17:55 - Вылет Варшава (WAW)</div>
+            <div>20:00 - Прилет Милан (BGY)</div>
         </div>
         <div class="meet-description">
             Встречаемся у ленты забора багажа<br/>
@@ -142,8 +142,8 @@
         <div class="schedule-list">
             <div class="schedule-list-header">7 октября</div>
             <div>17:30 - Выезд трансфером в аэропорт</div>
-            <div>20:35 - Вылет Милан - Варшава</div>
-            <div>22:35 - Прилет</div>
+            <div>20:35 - Вылет Милан (BGY)</div>
+            <div>22:35 - Прилет Варшава (WAW)</div>
         </div>
     </div>
 
@@ -153,9 +153,21 @@
         <div id="info" class="section_header">
             Дресс-код
         </div>
-        <div>Нам будет приятно, если вы поддержите цветовую гамму торжества:</div>
-        <div class="color-palette">
+        <div>Нам будет приятно, если вы поддержите цветовую гамму торжества</div>
+        <div class="color-palette-header">Девушки</div>
+        <div>Вечерние платья</div>
+        <div class="color-palette women">
             <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+
+        <div class="color-palette-header">Парни</div>
+        <div class="color-palette-description">Чёрный костюм, рубашка с длинным рукавом</div>
+        <div class="color-palette men">
             <div class="circle"></div>
             <div class="circle"></div>
             <div class="circle"></div>
