--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
 
         <div class="color-palette-header">Парни</div>
-        <div class="color-palette-description">Чёрный костюм, рубашка с длинным рукавом</div>
+        <div>Чёрный костюм, рубашка с длинным рукавом</div>
         <div class="color-palette men">
             <div class="circle"></div>
             <div class="circle"></div>
