Removed unnecessary images and updated time

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="photo-container">
         <img
                 class="photo initial-photo"
-                src="./img/photo_2024-04-20_21-28-49.jpg"
+                src="img/beach.jpg"
                 alt="Hanna and Aliaksei"
         />
     </div>
@@ -35,7 +35,7 @@
     <div class="photo-container">
         <img
                 class="photo initial-photo"
-                src="./img/photo_2024-04-20_21-28-49.jpg"
+                src="img/beach.jpg"
                 alt="Hanna and Aliaksei"
         />
     </div>
@@ -66,7 +66,7 @@
         <div class="photo-container">
             <img
                     class="photo"
-                    src="./img/villa2.webp"
+                    src="./img/villa.webp"
                     alt="villa"
             />
         </div>
@@ -89,7 +89,7 @@
                     5 октября
                 </div>
                 <div>
-                    21:30 - лёгкий ужин
+                    22:00 - лёгкий ужин
                 </div>
             </div>
             <div>
@@ -113,7 +113,7 @@
         <div class="photo-container">
             <img
                     class="photo"
-                    src="./img/dance%202.JPG"
+                    src="./img/dance.JPG"
                     alt="Hanna and Aliaksei"
             />
         </div>
@@ -204,7 +204,7 @@
                     Организатор
                 </div>
                 <div class="portrait-circle">
-                    <img src="./img/Sasha.PNG" alt="Sasha">
+                    <img src="img/Alexandra.jpg" alt="Alexandra">
                 </div>
                 Александра Есман
                 <div>
