--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                     6 октября
                 </div>
                 <div>
+                    15:20 - сбор гостей
+                </div>
+                <div>
                     15:30 - церемония
                 </div>
                 <div>
@@ -106,7 +109,7 @@
                     17:00 - праздничный ужин
                 </div>
                 <div>
-                    21:00 - свадебный торт
+                    21:30 - свадебный торт
                 </div>
             </div>
         </div>
@@ -141,7 +144,7 @@
         <img class="plane-departure" src="./img/plane.svg" alt="Departure">
         <div class="schedule-list">
             <div class="schedule-list-header">7 октября</div>
-            <div>17:30 - Выезд трансфером в аэропорт</div>
+            <div>16:00 - Выезд трансфером в аэропорт</div>
             <div>20:35 - Вылет Милан (BGY)</div>
             <div>22:35 - Прилет Варшава (WAW)</div>
         </div>
